bootJar {
    enabled = true
    mainClass.set("com.hbc.promise.sourcing.rule.PromiseSourcingRuleApplication")
}


configurations {
    [apiElements, runtimeElements].each {
        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
        it.outgoing.artifact(bootJar)
    }
}

dependencies {
    implementation(project(":promise-sourcing-rule:promise-sourcing-rule-api-domain"))
    implementation(project(":common-util"))
    implementation 'com.vladmihalcea:hibernate-types-52:2.16.2'
    implementation(project(":nfs-near-cache:core-near-cache-producer"))
    implementation project(":common:common-postgres")
    runtimeOnly 'org.postgresql:postgresql'
    implementation(project(":node:node-api-domain"))
    implementation(project(":postal-code-timezone:postal-code-timezone-api-domain"))
}
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11